@@ -1,5 +1,8 @@
 Changes with Apache 2.0.17-dev
 
+  *) Fix content-length in mod_negotiation to a long int representation.
+     [William Rowe]
+
   *) Remove BindAddress from the default config file.
      [giles@nemeton.com.au]
 
